Revised author information in a few directories.
Revised author information in root, Resources, Share, and ThirdParty.

--- a/Resources/source/CMakeLists.txt
+++ b/Resources/source/CMakeLists.txt
@@ -1,3 +1,5 @@
+# @authors S.V. Paulauskas and K. Smith
+
 #Set the utility sources that we will make a lib out of
 set(PaassResourceSources Messenger.cpp Notebook.cpp RandomInterface.cpp XmlInterface.cpp XmlParser.cpp )
 
