--- a/Resources/tests/CMakeLists.txt
+++ b/Resources/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+# @author S.V. Paulauskas
+
 add_executable(unittest-HelperFunctions unittest-HelperFunctions.cpp)
 target_link_libraries(unittest-HelperFunctions UnitTest++)
 install(TARGETS unittest-HelperFunctions DESTINATION bin/unittests)
