--- a/Share/CMakeLists.txt
+++ b/Share/CMakeLists.txt
@@ -1,3 +1,5 @@
+# @author S.V. Paulauskas
+
 #Configure and install the module file
 configure_file("modulefiles/pixieSuite" pixieSuite @ONLY)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/pixieSuite DESTINATION share/modulefiles/)
