Breaking the classes up and updating so that it runs. Works as originally written

--- a/Analysis/Utilities/CMakeLists.txt
+++ b/Analysis/Utilities/CMakeLists.txt
@@ -3,6 +3,7 @@ if (PAASS_USE_ROOT)
     add_subdirectory(RootScanner)
 endif (PAASS_USE_ROOT)
 
-add_subdirectory(Skeleton)
+add_subdirectory(EventReader)
 add_subdirectory(HeadReader)
+add_subdirectory(Skeleton)
 add_subdirectory(TraceFilterer)
