--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,9 @@ before_install:
   - cd ../../
   
 before_script:
-  - git clone https://github.com/spaulaus/paass-laughing-conqueror.git
   - mkdir paass-build
   - cd paass-build
-  - cmake ../paass-laughing-conqueror -DPAASS_BUILD_SCAN_UTILITIES=ON -DPAASS_BUILD_ACQ=OFF -DPAASS_BUILD_TESTS=ON -DPAASS_BUILD_UTKSCAN=ON -DPAASS_USE_ROOT=OFF
+  - cmake ../ -DPAASS_BUILD_SCAN_UTILITIES=ON -DPAASS_BUILD_ACQ=OFF -DPAASS_BUILD_TESTS=ON -DPAASS_BUILD_UTKSCAN=ON -DPAASS_USE_ROOT=OFF
 
 script:
   - make -j4
@@ -39,3 +38,4 @@ script:
 after_script:
   - cd ../
   - rm -rf paass-build
+  - ls ~/
