--- a/.travis.yml
+++ b/.travis.yml
@@ -20,28 +20,32 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
+      - gcc-5
       - g++-5
       - gfortran-5
+      - gsl-bin
+      - libgsl0-dev
+      - lib64ncurses5-dev
+
+env:
+  global:
+    - MAKEFLAGS="-j 5"
 
 before_install:
   - export CC=gcc-5 && export CXX=g++-5 && export FC=gfortran-5
-  - sudo apt-get -qq update
-  - sudo apt-get install gsl-bin libgsl0-dev lib64ncurses5-dev
-  - git clone https://github.com/unittest-cpp/unittest-cpp.git
-  - cd unittest-cpp/builds/
-  - cmake ../
-  - sudo make -j4 install
-  - cd ../../
-  
-before_script:
-  - mkdir paass-build
-  - cd paass-build
-  - cmake ../ -DPAASS_BUILD_SCAN_UTILITIES=ON -DPAASS_BUILD_ACQ=OFF -DPAASS_BUILD_TESTS=ON -DPAASS_BUILD_UTKSCAN=ON -DPAASS_USE_ROOT=OFF
+  - sudo apt-get -qq update --install-suggests
+  - mkdir -p /opt
+  - git clone https://github.com/unittest-cpp/unittest-cpp.git && cd unittest-cpp/builds/
+  - cmake ../ && sudo make -j4 install && cd ../../
+  - git clone https://github.com/spaulaus/xia-api.git && cd xia-api
+  - mkdir build && cd build && cmake ../ -DCMAKE_INSTALL_PREFIX=/opt && make install && cd ../../
+  - ln -s /opt/xia/api /opt/xia/current
+  - git clone https://github.com/spaulaus/paass-laughing-conqueror.git && cd paass-laughing-conqueror
+  - git checkout dev
+  - mkdir paass-build && cd paass-build
+  - cmake ../ -DPAASS_BUILD_SCAN_UTILITIES=ON -DPAASS_BUILD_ACQ=ON -DPAASS_BUILD_TESTS=ON -DPAASS_BUILD_UTKSCAN=ON -DPAASS_USE_ROOT=OFF
 
 script:
-  - make -j4
-
-after_script:
-  - cd ../
-  - rm -rf paass-build
-  - ls ~/
+  - make -j8 install
+  - cd ../install/bin/unittests
+  - (for test in *; do ./$test; if [ $? != 0 ]; then false; exit; fi; done)
