--- a/Analysis/Utilities/RootScanner/source/CMakeLists.txt
+++ b/Analysis/Utilities/RootScanner/source/CMakeLists.txt
@@ -1,8 +1,6 @@
 # @authors K. Smith, S. V. Paulauskas
 
-root_generate_dictionary(HistScannerDictionary HistScannerChanData.hpp
-        LINKDEF HistScannerLinkDef.h)
-add_executable(rootscan HistUnpacker.cpp HistScanner.cpp HistScannerChanData.cpp
-        HistScannerDictionary.cxx hist.cpp)
-target_link_libraries(rootscan PaassScanStatic ResourceStatic PugixmlStatic
-        PaassResourceStatic ${ROOT_LIBRARIES} -lTreePlayer)
+root_generate_dictionary(HistScannerDictionary HistScannerChanData.hpp LINKDEF HistScannerLinkDef.h)
+add_executable(rootscan HistUnpacker.cpp HistScanner.cpp HistScannerChanData.cpp HistScannerDictionary.cxx hist.cpp)
+target_link_libraries(rootscan PaassScanStatic ResourceStatic PugixmlStatic PaassResourceStatic ${ROOT_LIBRARIES} -lTreePlayer)
+install(TARGETS rootscan DESTINATION bin)
