Resolves #84 - Only require fortran if PAASS_USE_HRIBF is ON
This was a long standing issue of mine. The only fortran code that we have
is used to compile the old HRIBF codes. This was adding an unnecessary
dependency to the rest of the software.

--- a/Analysis/CMakeLists.txt
+++ b/Analysis/CMakeLists.txt
@@ -16,6 +16,8 @@ if (PAASS_USE_HRIBF)
     find_package(HRIBF REQUIRED)
     add_definitions("-D USE_HRIBF")
 
+    enable_language(Fortran)
+
     #If we are using HRIBF interface we need to include the ScanorInterface header
     #	for the following code.
     include_directories(Scanor/include)
