--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 cmake_minimum_required(VERSION 3.1)
 
-project(PAASS C CXX Fortran)
+project(PAASS)
 
 #Set the C++ standard to c++11.
 set(CMAKE_CXX_STANDARD 11)
