Resolves #28 - Get ROOT working in the CI Server
I figured out how to install root on the CI server so that we can compile
successfully against the libraries. It's ROOT5 but that's better than
nothing. The PAASS_BUILD_SCAN_UTILITIES=OFF because there are issues
building rootScanner.

I consider this good enough for now since rootScanner is still in pre-beta.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ matrix:
             - gsl-bin
             - libgsl0-dev
             - libncurses5-dev
+            - libroot*
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
     - os: linux
@@ -38,6 +39,7 @@ matrix:
             - gsl-bin
             - libgsl0-dev
             - libncurses5-dev
+            - libroot*
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
 
@@ -52,6 +54,6 @@ before_install:
 
 script:
   - mkdir paass-build && mkdir install
-  - cd paass-build && cmake ../ -DPAASS_BUILD_TESTS=ON -DPAASS_BUILD_UTKSCAN=ON -DPAASS_USE_ROOT=OFF && make install
+  - cd paass-build && cmake ../ -DPAASS_BUILD_TESTS=ON -DPAASS_BUILD_UTKSCAN=ON -DPAASS_USE_ROOT=ON -DPAASS_BUILD_SCAN_UTILITIES=OFF && make install
   - cd ../install/bin/unittests/
   - (for test in *; do echo $test; ./$test; if [ $? != 0 ]; then false; exit; fi; done)
