Resolves #87 - Flags for Analysis Utilities
We needed these options to allow finer control of the Analysis utilities
build. We build all Analysis utilities by default to maintain
consistent behavior. I replaced PAASS_BUILD_SCAN_UTILITIES with
PAASS_BUILD_ANALYSIS. This creates consistent behavior with the
PAASS_BUILD_ACQ option.

--- a/Analysis/CMakeLists.txt
+++ b/Analysis/CMakeLists.txt
@@ -1,4 +1,5 @@
 #@authors K. Smith, S. V. Paulauskas, C. R. Thornsberry
+option(PAASS_BUILD_UTKSCAN "Build utkscan" OFF)
 option(PAASS_USE_HRIBF "Use HRIBF library for scan base." OFF)
 
 #Check if GSL is installed
@@ -29,9 +30,7 @@ add_subdirectory(ScanLibraries)
 add_subdirectory(Resources)
 
 #Build utilities.
-if(PAASS_BUILD_SCAN_UTILITIES)
-    add_subdirectory(Utilities)
-endif(PAASS_BUILD_SCAN_UTILITIES)
+add_subdirectory(Utilities)
 
 if (PAASS_BUILD_UTKSCAN)
     add_subdirectory(Utkscan)
