Resolves #96 - Enables testing in CMake
Users can run unittests with make test or ctest. This simplifies software testing.

--- a/Analysis/Resources/tests/CMakeLists.txt
+++ b/Analysis/Resources/tests/CMakeLists.txt
@@ -2,6 +2,8 @@
 add_executable(unittest-ChannelConfiguration unittest-ChannelConfiguration.cpp)
 target_link_libraries(unittest-ChannelConfiguration UnitTest++ ${LIBS})
 install(TARGETS unittest-ChannelConfiguration DESTINATION bin/unittests)
+add_test(ChannelConfiguration unittest-ChannelConfiguration)
+
 
 if (PAASS_USE_GSL)
     if (${GSL_VERSION} GREATER 1.9)
@@ -15,21 +17,25 @@ if (PAASS_USE_GSL)
     add_executable(unittest-GslFitter ${GSL_FITTER_SOURCES})
     target_link_libraries(unittest-GslFitter ${GSL_LIBRARIES} UnitTest++)
     install(TARGETS unittest-GslFitter DESTINATION bin/unittests)
+    add_test(GslFitter unittest-GslFitter)
 endif (PAASS_USE_GSL)
 
 add_executable(unittest-PolynomialCfd unittest-PolynomialCfd.cpp
         ../source/PolynomialCfd.cpp)
 target_link_libraries(unittest-PolynomialCfd UnitTest++)
 install(TARGETS unittest-PolynomialCfd DESTINATION bin/unittests)
+add_test(PolynomialCfd unittest-PolynomialCfd)
 
 add_executable(unittest-TraditionalCfd unittest-TraditionalCfd.cpp
         ../source/TraditionalCfd.cpp)
 target_link_libraries(unittest-TraditionalCfd UnitTest++)
 install(TARGETS unittest-TraditionalCfd DESTINATION bin/unittests)
+add_test(TraditionalCfd unittest-PolynomialCfd)
 
 if (PAASS_USE_ROOT)
     add_executable(unittest-RootFitter unittest-RootFitter.cpp
             ../source/RootFitter.cpp ../source/VandleTimingFunction.cpp)
     target_link_libraries(unittest-RootFitter ${ROOT_LIBRARIES} UnitTest++)
     install(TARGETS unittest-RootFitter DESTINATION bin/unittests)
+    add_test(RootFitter unittest-RootFitter)
 endif (PAASS_USE_ROOT)
