--- a/Analysis/Utkscan/core/tests/CMakeLists.txt
+++ b/Analysis/Utkscan/core/tests/CMakeLists.txt
@@ -10,3 +10,4 @@
 add_executable(unittest-WalkCorrector unittest-WalkCorrector.cpp ../source/WalkCorrector.cpp)
 target_link_libraries(unittest-WalkCorrector UnitTest++ ${LIBS})
 install(TARGETS unittest-WalkCorrector DESTINATION bin/unittests)
+add_test(WalkCorrector unittest-WalkCorrector)
