Resolves #82 - Removes ROOT as required
I removed ROOT as a required dependency. Users are warned if it cannot be found.
I have updated the build scripts to use ROOT_FOUND instead of PAASS_USE_ROOT to
determine if they are going to build root.

--- a/Acquisition/MCA/source/CMakeLists.txt
+++ b/Acquisition/MCA/source/CMakeLists.txt
@@ -2,9 +2,9 @@
 #Determine the sources based on use flags
 set(MCA_LIB_SOURCES MCA.cpp)
 
-if (PAASS_USE_ROOT)
+if (ROOT_FOUND)
     set(MCA_LIB_SOURCES ${MCA_LIB_SOURCES} MCA_ROOT.cpp)
-endif (PAASS_USE_ROOT)
+endif (ROOT_FOUND)
 
 if (PAASS_USE_DAMM)
     set(MCA_LIB_SOURCES ${MCA_LIB_SOURCES} MCA_DAMM.cpp HisDrr.cpp)
@@ -13,12 +13,12 @@ endif (PAASS_USE_DAMM)
 #build the MCA library
 add_library(MCA_LIBRARY STATIC ${MCA_LIB_SOURCES})
 target_link_libraries(MCA_LIBRARY PixieInterface Utility)
-if (PAASS_USE_ROOT)
+if (ROOT_FOUND)
     target_link_libraries(MCA_LIBRARY ${ROOT_LIBRARIES})
-endif (PAASS_USE_ROOT)
+endif (ROOT_FOUND)
 
 #If we can we build the MCA program
-if (PAASS_USE_DAMM OR PAASS_USE_ROOT)
+if (PAASS_USE_DAMM OR ROOT_FOUND)
     add_executable(MCA MCA_exec.cpp)
     target_link_libraries(MCA MCA_LIBRARY)
     install(TARGETS MCA DESTINATION bin)
