--- a/Analysis/Resources/source/CMakeLists.txt
+++ b/Analysis/Resources/source/CMakeLists.txt
@@ -8,10 +8,10 @@ else (${GSL_VERSION} LESS 2.0)
     list(APPEND ResourceSources Gsl1Fitter.cpp)
 endif (${GSL_VERSION} GREATER 1.9)
 
-if (PAASS_USE_ROOT)
+if (ROOT_FOUND)
     list(APPEND ResourceSources CrystalBallFunction.cpp CsiFunction.cpp EmCalTimingFunction.cpp
             SiPmtFastTimingFunction.cpp RootFitter.cpp VandleTimingFunction.cpp)
-endif (PAASS_USE_ROOT)
+endif (ROOT_FOUND)
 
 #Add the sources to the library
 add_library(ResourceObjects OBJECT ${ResourceSources})
@@ -20,14 +20,14 @@ if (BUILD_SHARED_LIBS)
     message(STATUS "Building Utility Shared Objects")
     add_library(UtilityLibrary SHARED $<TARGET_OBJECTS:ResourceObjects>)
     target_link_libraries(UtilityLibrary PaassCoreStatic)
-    if (PAASS_USE_ROOT)
+    if (ROOT_FOUND)
         target_link_libraries(UtilityLibrary ${ROOT_LIBRARIES})
-    endif (PAASS_USE_ROOT)
+    endif (ROOT_FOUND)
     install(TARGETS UtilityLibrary DESTINATION lib)
 endif (BUILD_SHARED_LIBS)
 
 #Create Utility static library and add ncurses if we have it
 add_library(ResourceStatic STATIC $<TARGET_OBJECTS:ResourceObjects>)
-if (PAASS_USE_ROOT)
+if (ROOT_FOUND)
     target_link_libraries(ResourceStatic ${ROOT_LIBRARIES})
-endif (PAASS_USE_ROOT)
+endif (ROOT_FOUND)
