--- a/Analysis/Utilities/CMakeLists.txt
+++ b/Analysis/Utilities/CMakeLists.txt
@@ -27,7 +27,7 @@ if(PAASS_BUILD_TRACE_FILTERER)
     add_subdirectory(TraceFilterer)
 endif(PAASS_BUILD_TRACE_FILTERER)
 
-if (PAASS_USE_ROOT)
+if (ROOT_FOUND)
     if(PAASS_BUILD_ROOT_SCANNER)
         add_subdirectory(RootScanner)
     endif(PAASS_BUILD_ROOT_SCANNER)
@@ -35,5 +35,5 @@ if (PAASS_USE_ROOT)
     if(PAASS_BUILD_SCOPE)
         add_subdirectory(Scope)
     endif(PAASS_BUILD_SCOPE)
-endif (PAASS_USE_ROOT)
+endif (ROOT_FOUND)
 
