--- a/Acquisition/Interface/source/CMakeLists.txt
+++ b/Acquisition/Interface/source/CMakeLists.txt
@@ -1,5 +1,5 @@
 # @authors C. R. Thornsberry, K. Smith
-set(Interface_SOURCES AcqConfig.cpp AcqInterface.cpp EmulatedInterface.cpp Lock.cpp)
+set(Interface_SOURCES AcquisitionConfig.cpp AcquisitionInterface.cpp EmulatedInterface.cpp Lock.cpp)
 if (PAASS_BUILD_XIA_INTERFACE)
 	list(APPEND Interface_SOURCES PixieInterface.cpp)
 endif (PAASS_BUILD_XIA_INTERFACE)
