Cleaned up the way the include XIA files are found.
This starts to address issues in #38.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ option(PAASS_BUILD_ANALYSIS "Build analysis related programs" ON)
 option(PAASS_BUILD_SETUP "Include the older setup programs in installation" OFF)
 option(PAASS_BUILD_SHARED_LIBS "Install only scan libraries" ON)
 option(PAASS_BUILD_TESTS "Builds programs designed to test the package. Including UnitTest++ test." OFF)
+option(PAASS_BUILD_XIA_INTERFACE "" ON)
 option(PAASS_USE_DAMM "Use DAMM for MCA" ON)
 
 #------------------------------------------------------------------------------
