utkscan and utkscanor now plot histograms appropriately.
utkscan = ROOT histogramming
utkscanor = DAMM histogramming

I've also cleaned up some of the methods and calls to make them more transparent.

--- a/Analysis/Utkscan/core/source/CMakeLists.txt
+++ b/Analysis/Utkscan/core/source/CMakeLists.txt
@@ -25,14 +25,11 @@ set(CORRELATION_SOURCES
 
 set(PLOTTING_SOURCES
         Plots.cpp
-        PlotsRegister.cpp)
-
-if(ROOT_FOUND)
-    list(APPEND PLOTTING_SOURCES RootHandler.cpp)
-endif(ROOT_FOUND)
+        PlotsRegister.cpp
+        RootHandler.cpp)
 
 if (NOT PAASS_USE_HRIBF)
-    set(MAIN_SOURCES utkscan.cpp HisFile.cpp)
+    set(MAIN_SOURCES utkscan.cpp)
 else (PAASS_USE_HRIBF)
     set(MAIN_SOURCES utkscanor.cpp)
 endif (NOT PAASS_USE_HRIBF)
