Updating build script so that it won't fail.
The builds will fail with the last commit. I've updated this so that it doesn't
try to set PAASS_BUILD_UTKSCAN=ON if we're on the build that doesn't use ROOT.

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ matrix:
             - libncurses5-dev
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
-        - BUILD_OPTIONS="-DPAASS_BUILD_TESTS=ON -DPAASS_BUILD_UTKSCAN=ON -DPAASS_BUILD_SETUP=ON"
+        - BUILD_OPTIONS="-DPAASS_BUILD_TESTS=ON -DPAASS_BUILD_SETUP=ON"
     - os: linux
       addons:
         apt:
