DRYing out the Processors
Now that we're using Plot differently, we can remove these stupid repeated
wrappers in EventProcessor.

--- a/Analysis/Utkscan/experiment/source/CMakeLists.txt
+++ b/Analysis/Utkscan/experiment/source/CMakeLists.txt
@@ -1,11 +1,18 @@
 #@authors S. V. Paulauskas
 set(EXPERIMENT_SOURCES
         Anl1471Processor.cpp
+        #Beta4Hen3Processor.cpp
+        #CrosstalkProcessor.cpp
+        #Dssd4SHEProcessor.cpp
         E11027Processor.cpp
+        #Ge4Hen3Processor.cpp
         IS600Processor.cpp
+        #LaBr3TestProcessor.cpp
+        SheCorrelator.cpp
         TemplateExpProcessor.cpp
         TwoChanTimingProcessor.cpp
         VandleOrnl2012Processor.cpp
+        #WalkVandleBetaProcessor.cpp
         )
 
 add_library(UtkscanExperimentObjects OBJECT ${EXPERIMENT_SOURCES})
