Moving the TraceFilter class so that it can be used by Scope.

--- a/Analysis/Resources/source/CMakeLists.txt
+++ b/Analysis/Resources/source/CMakeLists.txt
@@ -1,6 +1,6 @@
 #@author S. V. Paulauskas
 #Set the utility sources that we will make a lib out of
-set(ResourceSources PolynomialCfd.cpp TraditionalCfd.cpp)
+set(ResourceSources PolynomialCfd.cpp TraditionalCfd.cpp TraceFilter.cpp)
 
 if (${GSL_VERSION} GREATER 1.9)
     list(APPEND ResourceSources Gsl2Fitter.cpp)
