Updated GslFitter to combine Gsl1Fitter and Gsl2Fitter
This makes the code DRY. I added unittest coverage for the Gaussian fitting function.
I added a compilation flag to handle switching between GSL versions. I updated the name of
fitting variables in the unit tests to differentiate between PMT functions and
Gaussian functions. I had to update RootFitter's unittest.

--- a/Analysis/CMakeLists.txt
+++ b/Analysis/CMakeLists.txt
@@ -5,6 +5,9 @@ option(PAASS_USE_HRIBF "Use HRIBF library for scan base." OFF)
 find_package(GSL REQUIRED)
 include_directories(${GSL_INCLUDE_DIRS})
 link_directories(${GSL_LIBRARY_DIRS})
+if (${GSL_VERSION} LESS 2.0)
+    add_definitions("-D GSL_VERSION_ONE")
+endif (${GSL_VERSION} LESS 2.0)
 
 #Everything below is dependent on these two sets of libaries so we include the
 #headers.
