Adding class to hold configuration settings for CFDs

--- a/Analysis/Resources/source/CMakeLists.txt
+++ b/Analysis/Resources/source/CMakeLists.txt
@@ -1,5 +1,5 @@
 #@author S. V. Paulauskas
-set(ResourceSources GslFitter.cpp PolynomialCfd.cpp TraditionalCfd.cpp TraceFilter.cpp)
+set(ResourceSources GslFitter.cpp PolynomialCfd.cpp TraditionalCfd.cpp TraceFilter.cpp CfdConfiguration.cpp)
 
 if (ROOT_FOUND)
     list(APPEND ResourceSources CrystalBallFunction.cpp CsiFunction.cpp EmCalTimingFunction.cpp
