Updating RootFitter to use TimingConfiguration

--- a/Analysis/Resources/tests/CMakeLists.txt
+++ b/Analysis/Resources/tests/CMakeLists.txt
@@ -29,7 +29,7 @@ add_test(XiaCfd unittest-XiaCfd)
 
 if (ROOT_FOUND)
     add_executable(unittest-RootFitter unittest-RootFitter.cpp ../source/RootFitter.cpp
-            ../source/VandleTimingFunction.cpp)
+            ../source/VandleTimingFunction.cpp ../source/TimingConfiguration.cpp)
     target_link_libraries(unittest-RootFitter ${ROOT_LIBRARIES} UnitTest++)
     install(TARGETS unittest-RootFitter DESTINATION bin/unittests)
     add_test(RootFitter unittest-RootFitter)
